# lima-hn

./: .justfile  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md
.claude/skills/harness/: SKILL.md
scripts/: harness-start
src/: app.rs  cli.rs  comment_tree.rs  help.rs  keys.rs  main.rs  settings.rs  test_utils.rs
src/api/: client.rs  error.rs  types.rs
src/storage/: db.rs  migrations.rs  mod.rs  queries.rs  types.rs
src/storage/sql/: 001_initial.sql
src/theme/: builtin.rs  mod.rs
src/views/: comments.rs  common.rs  context_menu.rs  debug.rs  help_overlay.rs  html.rs  mod.rs  status_bar.rs  stories.rs  theme_picker.rs  tree.rs
src/views/snapshots/: hn__views__comments__tests__comments_code_block.snap  hn__views__comments__tests__comments_multiple_paragraphs.snap  hn__views__comments__tests__comments_rich_text_formatting.snap  hn__views__comments__tests__comments_view_collapsed_children_show_text.snap  hn__views__comments__tests__comments_view_depth_indentation.snap  hn__views__comments__tests__comments_view_fills_viewport_with_partial_comments.snap  hn__views__comments__tests__comments_view_renders_thread.snap  hn__views__comments__tests__comments_view_top_level_collapsed_no_connectors.snap  hn__views__comments__tests__comments_view_with_timestamp.snap  hn__views__comments__tests__text_wrap_collapsed.snap  hn__views__comments__tests__text_wrap_expanded.snap  hn__views__context_menu__tests__context_menu_renders.snap  hn__views__context_menu__tests__context_menu_selection.snap  hn__views__context_menu__tests__context_menu_self_post_hides_domain_filter.snap  hn__views__help_overlay__tests__help_overlay_comments.snap  hn__views__help_overlay__tests__help_overlay_stories.snap  hn__views__stories__tests__stories_view_aligned_columns.snap  hn__views__stories__tests__stories_view_empty_list.snap  (+9 more)
src/widgets/: comment_list.rs
