[package]
name = "lima-hn"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "hn"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
open = "5"
chrono = "0.4"
html-escape = "0.2"
futures = "0.3"
tokio-util = "0.7"
anyhow = "1"
textwrap = "0.16"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
terminal-light = "1"
dirs = "5"
rusqlite = { version = "0.31", features = ["bundled"] }

[dev-dependencies]
tokio-test = "0.4"
insta = "1.40"
tempfile = "3"
