[package]
name = "hn"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "hn"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
open = "5"
arboard = "3"
chrono = "0.4"
html-escape = "0.2"
futures = "0.3"
tokio-util = "0.7"
anyhow = "1"
textwrap = "0.16"
unicode-width = "0.2"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
terminal-light = "1"
dirs = "5"
rusqlite = { version = "0.31", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"

[profile.dev]

[profile.dev.package."*"]
opt-level = 2

[profile.dev.package.libsqlite3-sys]
opt-level = 3

[profile.release]
debug = true
strip = false

[profile.profiling]
inherits = "release"
debug = 2
strip = false
lto = false

[dev-dependencies]
tokio-test = "0.4"
insta = "1.40"
tempfile = "3"
wiremock = "0.6"
